# cryptopals-rs

./: Cargo.toml  README.md
src/: aes.rs  buffer.rs  constants.rs  cryptobuf.rs  encodecode.rs  error.rs  lib.rs  main.rs  set1.rs  set2.rs  xorcrypt.rs
tests/: cryptopals.rs
