[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Sriharsha Mucheli <harshasrisri@gmail.com>"]
edition = "2021"
description = "Computer Security Challenges from www.cryptopals.com solved using Rust"

[dependencies]
base64 = "0.10.1"
hex = "0.3.2"
openssl = "0.10.27"
anyhow = "1.0"
lazy_static = "1.4.0"
rand = "0.7.3"
